--- a/styles.css
+++ b/styles.css
@@ -135,18 +135,29 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
   }
-  .portfolio-item {
-    background: rgba(255, 255, 255, 0.1);
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
-    transition: transform 0.3s;
-  }
-  .portfolio-item:hover {
+.portfolio-item {
+  background: rgba(255, 255, 255, 0.1);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+  transition: transform 0.2s;
+  height: 90%; 
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+  overflow: hidden; 
+  position: relative; 
+}
+
+
+
+.portfolio-item:hover {
     transform: translateY(-10px);
   }
-  .portfolio-item img {
-    max-width: 100%;
+.portfolio-item img {
+    height: 90%; 
+    width: 85%; 
+    object-fit: cover; 
     border-radius: 10px;
   }
   .resume-section {
